--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-email/components": "^1.0.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.9",
+    "astro-icon": "^1.1.5",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.34.0",
     "resend": "^6.8.0",
